adding initial style to eqHorizontal

--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Title</title>
 </head>
 <body>
-    <script src="./dist/index.js"></script>
+<div class="container eqHorizontal">
+    <img src="assets/images/varganya0.jpg" height="150"/>
+    <img src="assets/images/varganya1.jpg" height="150"/>
+    <img src="assets/images/varganya2.jpg" height="150"/>
+    <img src="assets/images/varganya3.jpg" height="150"/>
+    <img src="assets/images/varganya4.jpg" height="150"/>
+    <img src="assets/images/varganya5.jpg" height="150"/>
+    <img src="assets/images/varganya6.jpg" height="150"/>
+    <img src="assets/images/varganya7.jpg" height="150"/>
+    <img src="assets/images/varganya8.jpg" height="150"/>
+    <img src="assets/images/varganya9.jpg" height="150"/>
+</div>
+<button>I'm a button</button>
+<script src="./dist/bundle.js"></script>
 </body>
 </html>
