--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 <div class="container eqHorizontal">
-    <img src="assets/images/varganya0.jpg"/>
-    <img src="assets/images/varganya1.jpg"/>
-    <img src="assets/images/varganya2.jpg"/>
-    <img src="assets/images/varganya3.jpg"/>
-    <img src="assets/images/varganya4.jpg"/>
-    <img src="assets/images/varganya5.jpg"/>
-    <img src="assets/images/varganya6.jpg"/>
-    <img src="assets/images/varganya7.jpg"/>
-    <img src="assets/images/varganya8.jpg"/>
-    <img src="assets/images/varganya9.jpg"/>
+    <img src="assets/images/varganya0.jpg" style="opacity: 0"/>
+    <img src="assets/images/varganya1.jpg" style="opacity: 0"/>
+    <img src="assets/images/varganya2.jpg" style="opacity: 0"/>
+    <img src="assets/images/varganya3.jpg" style="opacity: 0"/>
+    <img src="assets/images/varganya4.jpg" style="opacity: 0"/>
+    <img src="assets/images/varganya5.jpg" style="opacity: 0"/>
+    <img src="assets/images/varganya6.jpg" style="opacity: 0"/>
+    <img src="assets/images/varganya7.jpg" style="opacity: 0"/>
+    <img src="assets/images/varganya8.jpg" style="opacity: 0"/>
+    <img src="assets/images/varganya9.jpg" style="opacity: 0"/>
 </div>
 <button>I'm a button</button>
 <script src="./dist/bundle.js"></script>
